# DialogueCopilot

./: .gitignore  README.md
.github/workflows/: ci.yml
twitchguard/: .env.example  README.md  docker-compose.yml
twitchguard/backend/: Dockerfile  config.example.yaml  pyproject.toml
twitchguard/backend/migrations/: env.py
twitchguard/backend/migrations/versions/: 0001_initial.py  0002_classifier_workers.py  0003_accounts.py
twitchguard/backend/rules_builtin/: spam.md  toxicity.md
twitchguard/backend/src/twitchguard/: __init__.py  accounts.py  actions.py  app.py  audit.py  config.py  crypto.py  db.py  emailer.py  errors.py  flags.py  ingest.py  lang.py  logging_setup.py  main.py  models.py  pipelines.py  ratelimit.py  rbac.py  sessions.py  supervisor.py  usage.py  ws.py
twitchguard/backend/src/twitchguard/api/: __init__.py  account.py  auth.py  dashboard.py  deps.py  flags.py  moderators.py  rules.py  settings.py  stream.py
twitchguard/backend/src/twitchguard/moderation/: __init__.py  engine.py  prompts.py  types.py  verdicts.py
twitchguard/backend/src/twitchguard/moderation/backends/: __init__.py  api.py  base.py  cli.py
twitchguard/backend/src/twitchguard/rules/: __init__.py  parser.py  schema.py  service.py
twitchguard/backend/src/twitchguard/twitch/: __init__.py  eventsub.py  helix.py  oauth.py
twitchguard/backend/tests/: conftest.py  test_accounts.py  test_actions.py  test_auth.py  test_classifier.py  test_flags.py  test_rbac.py  test_rules.py  test_security_logs.py  test_settings_backend.py  test_workers.py  test_ws.py
(+20 files in other folders)
