[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "twitchguard"
version = "0.1.0"
description = "Advisory AI-assisted Twitch chat moderation: flags violations for human moderators, never punishes on its own"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlalchemy[asyncio]>=2.0.30",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "redis>=5.0",
    "httpx>=0.27",
    "websockets>=12.0",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "cryptography>=42.0",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "asgi-lifespan>=2.1",
    "aiosqlite>=0.20",
    "fakeredis>=2.23",
    "ruff>=0.5",
    "mypy>=1.10",
    "types-PyYAML",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
# B008: `Depends(...)` in defaults is the idiomatic FastAPI dependency style.
ignore = ["B008"]

[tool.mypy]
python_version = "3.11"
files = ["src"]
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
ignore_missing_imports = true
